tmp files to fix huge bugs from palette page:   - contrast checker for text only added   - bug fixes with the main palette solved TODO:   - add okhcl wheel

--- a/client/styles/palette-tmp.css
+++ b/client/styles/palette-tmp.css
@@ -10,24 +10,6 @@
   box-sizing: border-box;
 }
 
-/* Estilos IDs */
-#color-1 {
-  background-color: var(--color-1);
-}
-#color-2 {
-  background-color: var(--color-2);
-}
-#color-3 {
-  background-color: var(--color-3);
-}
-#color-4 {
-  background-color: var(--color-4);
-}
-#color-5 {
-  background-color: var(--color-5);
-}
-
-
 /* Main */
 .container {
   width: calc(100vw - var(--scrollbar-width));
@@ -163,6 +145,9 @@
 #palette-1, #palette-2 {
   margin-top: 5%;
   justify-self: flex-end;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .color-box {
@@ -230,6 +215,7 @@
 
 .edit-icon {
   display: none;
+  color: inherit;
   background-color: transparent;
   border: transparent;
 }
